--- a/src/components/header/topMenu/TopMenu.scss
+++ b/src/components/header/topMenu/TopMenu.scss
@@ -16,38 +16,27 @@
     margin: 0 auto;
     padding: 24px 18px;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+
     @media (min-width: 576px) {
       padding-left: 28px;
       padding-right: 28px;
     }
   }
 
-  &__row {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
-
   &__left-block {
-    flex: content;
     display: flex;
     justify-content: flex-start;
     align-items: center;
   }
 
-  &__button-lines {
+  &__icon-hamburger {
     cursor: pointer;
     display: block;
     width: 24px;
     height: 24px;
-    margin-right: 18px;
-    position: absolute;
-    top: 27.5px;
-    left: 18px;
-
-    @media (min-width: 576px) {
-      left: 36px;
-    }
 
     @media (min-width: 1160px) {
       display: none;
@@ -57,12 +46,7 @@
 
   &__logotype {
     display: block;
-
     margin-left: 36px;
-
-    @media (min-width: 576px) {
-      margin-left: 54px;
-    }
 
     @media (min-width: 1160px) {
       margin-left: 0;
@@ -109,7 +93,6 @@
   }
 
   &__right-block {
-    // position: relative;
     display: flex;
     justify-content: space-between;
   }
@@ -131,17 +114,6 @@
     text-decoration: none;
   }
 
-  &__phone-number {
-    color: white;
-    font-size: 18px;
-    line-height: 24px;
-
-    // top-menu_title_news
-    &_news {
-      color: #000;
-    }
-  }
-
   &__private-office {
     cursor: pointer;
     display: flex;
@@ -152,19 +124,13 @@
       color: #b5bdc8;
     }
 
-    &:hover .icon-user__icon:first-of-type {
-      display: block;
-    }
+    // &:hover .icon-user__icon:first-of-type {
+    //   display: block;
+    // }
 
-    &:hover .icon-user__icon:nth-of-type(2) {
-      display: none;
-    }
-  }
-
-  &__button-icons {
-    width: 24px;
-    height: 24px;
-    // position: relative;
+    // &:hover .icon-user__icon:nth-of-type(2) {
+    //   display: none;
+    // }
   }
 
   &__title {
@@ -195,11 +161,11 @@
 //   overflow: hidden;
 // }
 
-.icon-user__icon {
-  &:first-of-type {
-    display: none;
-  }
-}
+// .icon-user__icon {
+//   &:first-of-type {
+//     display: none;
+//   }
+// }
 
 .triple-icon {
   cursor: pointer;
