started make footer

--- a/src/components/ui/MenuLink/MenuLink.module.scss
+++ b/src/components/ui/MenuLink/MenuLink.module.scss
@@ -45,7 +45,7 @@
 
   color: #78828c;
   &:hover {
-    color: #000;
+    color: #28323c;
   }
 
   transition: color 0.22s;
@@ -63,7 +63,7 @@
   line-height: 24px;
   margin-left: 20px;
 
-  color: #000;
+  color: #28323c;
 
   transition: color 0.22s;
   transition-duration: 0.22s;
