--- a/src/components/header/topMenu/TopMenu.scss
+++ b/src/components/header/topMenu/TopMenu.scss
@@ -1,7 +1,7 @@
 .top-menu {
   width: 100%;
   height: 72px;
-  position: absolute;
+  position: fixed;
   top: 0;
 
   &__with-border {
@@ -53,35 +53,6 @@
     }
   }
 
-  &__link {
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 14px;
-    color: #b5bdc8;
-    margin-left: 20px;
-
-    &:hover {
-      color: white;
-    }
-    &:active {
-      color: white;
-    }
-
-    @media (min-width: 1160px) {
-      font-size: 16px;
-      line-height: 24px;
-      margin-left: 20px;
-    }
-    // top-menu__link_news
-    &_news {
-      color: #78828c;
-
-      &:hover {
-        color: #000;
-      }
-    }
-  }
-
   &__right-block {
     display: flex;
     justify-content: space-between;
@@ -100,8 +71,31 @@
     margin-right: 64px;
   }
 
-  &__phone-link {
+  &__link {
     text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 24px;
+    margin-left: 20px;
+
+    color: #b5bdc8;
+
+    &:hover {
+      color: white;
+    }
+
+    @media (min-width: 768px) {
+      font-size: 16px;
+    }
+    // top-menu__link_news
+    &_news {
+      color: #78828c;
+
+      &:hover {
+        color: #000;
+      }
+    }
   }
 
   &__private-office {
