--- a/src/components/ui/MenuLink/MenuLink.module.scss
+++ b/src/components/ui/MenuLink/MenuLink.module.scss
@@ -24,6 +24,7 @@
   cursor: pointer;
   font-size: 16px;
   line-height: 24px;
+  font-weight: 500;
   margin-left: 20px;
 
   color: white;
@@ -61,6 +62,7 @@
   cursor: pointer;
   font-size: 16px;
   line-height: 24px;
+  font-weight: 500;
   margin-left: 20px;
 
   color: #28323c;
