--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -28,7 +28,7 @@
     }
   }
 
-  &__logos-items {
+  &__logos {
     margin-right: 24px;
     height: 24px;
 
@@ -67,17 +67,11 @@
   &__nav {
     width: 100%;
     display: block;
-    margin-bottom: 24px;
 
     @media (min-width: 768px) {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 16px;
-    }
-
-    @media (min-width: 1160px) {
-      width: 75%;
-      margin-bottom: 0;
+      flex-wrap: wrap;
     }
   }
 
@@ -95,55 +89,53 @@
       padding-right: 12px;
     }
 
+    @media (min-width: 1160px) {
+      width: calc(25% - 18px);
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+
     &:first-of-type {
       @media (min-width: 768px) {
         padding-left: 0px;
       }
+      @media (min-width: 1160px) {
+        padding-left: 0px;
+      }
     }
 
-    &:last-of-type {
+    &:nth-of-type(3) {
       @media (min-width: 768px) {
         padding-right: 0px;
       }
-
       @media (min-width: 1160px) {
         padding-right: 12px;
       }
     }
 
-    @media (min-width: 1160px) {
-      width: calc(33.33% - 20px);
-      margin-bottom: 0;
-    }
-  }
-
-  &__copyright-wrapper {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-
-    @media (min-width: 1160px) {
-      width: 25%;
-    }
-  }
-
-  &__copyright {
-    margin-top: 0px;
-    width: 100%;
-    display: block;
-    text-align: left;
-
-    @media (min-width: 1160px) {
-      text-align: right;
+    &:last-of-type {
       margin-top: 48px;
-      width: calc(100% - 24px);
+
+      @media (min-width: 768px) {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+      }
+
+      @media (min-width: 1160px) {
+        text-align: end;
+
+        width: calc(25% - 18px);
+        padding-left: 12px;
+        padding-right: 0;
+        margin-top: 0;
+      }
     }
   }
 
   &__copyright-link {
+    max-width: 360px;
     text-decoration: none;
-    text-align: left;
     display: block;
     font-size: 11px;
     line-height: 15px;
@@ -153,16 +145,13 @@
     &:hover {
       color: #28323c;
     }
+
+    @media (min-width: 1160px) {
+      max-width: 100%;
+    }
   }
 
-  &__copyright-npf {
-    color: #78828c;
-    font-size: 11px;
-    line-height: 24px;
-    margin-right: 0;
-  }
-
-  &__copyright-license {
+  &__copyright {
     color: #78828c;
     font-size: 11px;
     line-height: 24px;
