--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,9 +1,11 @@
 .footer {
   width: 100%;
+  max-width: 1920px;
   margin: 0 auto;
   background-color: #fff;
   padding: 24px 24px 32px;
   border-top: 1px solid #e4e4e4;
+  box-shadow: 0 8px 8px rgb(26 65 101 / 25%);
 
   @media (min-width: 576px) {
     padding: 48px 28px 32px;
