--- a/src/styles/TopMenu.scss
+++ b/src/styles/TopMenu.scss
@@ -3,7 +3,7 @@
   max-width: 1920px;
   margin: 0 auto;
   height: 72px;
-  position: fixed;
+  position: absolute;
   top: 0;
 
   &__with-border {
