--- a/src/components/mainPage/calculator/PensionInfo/PensionInfo.module.scss
+++ b/src/components/mainPage/calculator/PensionInfo/PensionInfo.module.scss
@@ -68,7 +68,8 @@
   &__output-pension {
     color: #28323c;
     margin-bottom: 96px;
-    font-size: 18px;
+    font-size: 34px;
+    line-height: 48px;
 
     @media screen and (min-width: 576px) {
       margin-bottom: 48px;
@@ -76,6 +77,8 @@
 
     @media screen and (min-width: 1024px) {
       margin-bottom: 96px;
+      font-size: 28px;
+      line-height: 48px;
     }
   }
 
@@ -132,11 +135,13 @@
 
   &__output-sum-nakoplen {
     font-size: 18px;
+    line-height: 24px;
     color: #0a0a0a;
   }
 
   &__output-social {
     font-size: 18px;
+    line-height: 24px;
     color: #0a0a0a;
     margin-top: 24px;
   }
