--- a/src/components/mainPage/calculator/Calc/Calc.module.scss
+++ b/src/components/mainPage/calculator/Calc/Calc.module.scss
@@ -103,7 +103,7 @@
     @media screen and (min-width: 1024px) {
       width: 47.92%;
       position: absolute;
-      bottom: 41px;
+      bottom: 0;
       right: 0;
       z-index: 0;
     }
