--- a/src/components/general/cards/CardsCard/CardsCard.module.scss
+++ b/src/components/general/cards/CardsCard/CardsCard.module.scss
@@ -1,36 +1,33 @@
-.statistics-card {
+.cards-card {
   width: 100%;
-  max-width: 100%;
-  min-height: 96px;
-  border-top: 1px solid #e4e4e4;
-  border: 1px solid #e4e6e8;
-  box-sizing: border-box;
   padding: 24px;
+  border-top: 1px solid #e4e4e4;
   display: flex;
 
   @media screen and (min-width: 576px) {
-    max-width: 260px;
-    width: 33.33%;
     display: block;
+    width: 33.33%;
+    border-right: 1px solid #e4e4e4;
+    border-bottom: 1px solid #e4e4e4;
   }
 
   @media screen and (min-width: 768px) {
     width: 25%;
-    display: block;
   }
 
-  @media screen and (min-width: 1440px) {
-    padding-bottom: 24px;
+  @media screen and (min-width: 1160px) {
+    width: 20%;
   }
 
   &__icon {
     width: 24px;
     height: 24px;
-    margin-right: 24px;
     margin-bottom: 0;
+    margin-right: 24px;
 
     @media screen and (min-width: 576px) {
-      margin-bottom: 64px;
+      margin-bottom: 72px;
+      margin-right: 0;
     }
   }
 
