--- a/src/components/investment/InvestmentRulesCard/InvestmentRulesCard.module.scss
+++ b/src/components/investment/InvestmentRulesCard/InvestmentRulesCard.module.scss
@@ -1,24 +1,22 @@
-.investment-rules {
-  &__block {
-    width: 100%;
-    padding: 24px;
-    border-top: 1px solid #e4e4e4;
-    display: flex;
+.investment-card {
+  width: 100%;
+  padding: 24px;
+  border-top: 1px solid #e4e4e4;
+  display: flex;
 
-    @media screen and (min-width: 576px) {
-      display: block;
-      width: 33.33%;
-      border-right: 1px solid #e4e4e4;
-      border-bottom: 1px solid #e4e4e4;
-    }
+  @media screen and (min-width: 576px) {
+    display: block;
+    width: 33.33%;
+    border-right: 1px solid #e4e4e4;
+    border-bottom: 1px solid #e4e4e4;
+  }
 
-    @media screen and (min-width: 768px) {
-      width: 25%;
-    }
+  @media screen and (min-width: 768px) {
+    width: 25%;
+  }
 
-    @media screen and (min-width: 1160px) {
-      width: 20%;
-    }
+  @media screen and (min-width: 1160px) {
+    width: 20%;
   }
 
   &__icon {
