PortfolioStructure first controller & optionsblock

--- a/src/styles/Investment.scss
+++ b/src/styles/Investment.scss
@@ -1,4 +1,4 @@
-.selection-options-block-hidden {
+.options-block-hidden {
   max-width: 382px;
   border-radius: 6px;
   position: fixed;
@@ -19,7 +19,7 @@
   }
 }
 
-.selection-options-block-visible {
+.options-block-visible {
   max-width: 382px;
   border-radius: 6px;
   position: fixed;
