--- a/src/components/general/table/Table/Table.module.scss
+++ b/src/components/general/table/Table/Table.module.scss
@@ -11,3 +11,43 @@
     width: 960px;
   }
 }
+
+.td {
+  vertical-align: baseline;
+  box-sizing: border-box;
+  border-top: 1px solid #e6f0fa;
+  color: #28323c;
+  padding: 8px 12px;
+
+  &:first-of-type {
+    padding: 8px 12px 8px 0;
+  }
+
+  &:last-of-type {
+    padding: 8px 0 8px 12px;
+  }
+}
+
+.th {
+  text-align: left;
+  vertical-align: baseline;
+  box-sizing: border-box;
+  font-weight: 400;
+  color: #5a646e;
+  font-size: 13px;
+  padding: 8px 12px;
+
+  &:first-of-type {
+    padding: 8px 12px 8px 0;
+  }
+
+  &:last-of-type {
+    padding: 8px 0 8px 12px;
+  }
+}
+
+.tr {
+  font-size: 100%;
+  vertical-align: baseline;
+  box-sizing: border-box;
+}
