--- a/src/components/general/Table/Table.module.scss
+++ b/src/components/general/Table/Table.module.scss
@@ -17,6 +17,8 @@
   box-sizing: border-box;
   border-top: 1px solid #e6f0fa;
   color: #28323c;
+  font-size: 16px;
+  line-height: 24px;
   padding: 8px 12px;
 
   &:first-of-type {
@@ -35,6 +37,7 @@
   font-weight: 400;
   color: #5a646e;
   font-size: 13px;
+  line-height: 24px;
   padding: 8px 12px;
 
   &:first-of-type {
