--- a/src/components/serviceSupport/TableQ/TableQ.module.scss
+++ b/src/components/serviceSupport/TableQ/TableQ.module.scss
@@ -1,56 +1,86 @@
 .table {
-  width: 100%;
-  background-color: #fff;
-  overflow-x: scroll;
+  &__table-container {
+    width: 100%;
+    position: relative;
+    overflow-x: auto;
 
-  @media screen and (min-width: 960px) {
-    overflow-x: hidden;
+    @media screen and (min-width: 1024px) {
+      overflow-x: hidden;
+    }
   }
 
-  &__scrolling {
-    width: 960px;
+  &__table {
+    color: #001100;
+    border-collapse: collapse;
+    width: 576px;
+    margin: 10px 0;
+    position: relative;
+
+    @media screen and (max-width: 576px) {
+      &::before {
+        position: absolute;
+        display: block;
+        width: 24px;
+        top: 0;
+        bottom: 0;
+        background-image: radial-gradient(farthest-side, rgba(26, 65, 101, 0.5), transparent);
+        content: "";
+        right: auto;
+        left: -12px;
+      }
+
+      &::after {
+        position: absolute;
+        display: block;
+        width: 24px;
+        top: 0;
+        bottom: 0;
+        background-image: radial-gradient(farthest-side, rgba(49, 103, 155, 0.5), transparent);
+        content: "";
+        right: -12px;
+        left: auto;
+        box-sizing: inherit;
+      }
+    }
+  }
+
+  &__headers {
+    font-size: 13px;
+    color: #001100;
+    line-height: 1.5rem;
+    margin: 12px 0;
+    font-weight: 700;
+  }
+
+  &__rows {
+    font-size: 16px;
+    color: #001100;
+    line-height: 1.5rem;
+    margin: 12px 0;
+    font-weight: 500;
   }
 }
 
 .td {
-  vertical-align: baseline;
-  box-sizing: border-box;
-  border-top: 1px solid #e6f0fa;
-  color: #28323c;
-  font-size: 16px;
-  line-height: 24px;
-  padding: 8px 12px;
+  padding: 0 8px;
 
-  &:first-of-type {
-    padding: 8px 12px 8px 0;
+  &:nth-of-type(1) {
+    width: 43.16%;
+    padding-left: 0;
   }
 
-  &:last-of-type {
-    padding: 8px 0 8px 12px;
-  }
-}
-
-.th {
-  text-align: left;
-  vertical-align: baseline;
-  box-sizing: border-box;
-  font-weight: 400;
-  color: #5a646e;
-  font-size: 13px;
-  line-height: 24px;
-  padding: 8px 12px;
-
-  &:first-of-type {
-    padding: 8px 12px 8px 0;
+  &:nth-of-type(2) {
+    width: 27.1%;
   }
 
-  &:last-of-type {
-    padding: 8px 0 8px 12px;
+  &:nth-of-type(3) {
+    width: 29.74%;
+    padding-right: 0;
   }
 }
 
 .tr {
-  font-size: 100%;
+  width: 100%;
+  border-top: 1px solid #e6f0fa;
   vertical-align: baseline;
-  box-sizing: border-box;
 }
