--- a/src/components/general/expanding/ExpandingAnswer/ExpandingAnswer.module.scss
+++ b/src/components/general/expanding/ExpandingAnswer/ExpandingAnswer.module.scss
@@ -1,19 +1,20 @@
-.paragraph {
-  font-size: 16px;
-  line-height: 24px;
-  font-style: normal;
-  color: #5a646e;
-  margin: 12px 0;
-}
-
 .expanding {
   width: 100%;
   border-bottom: 1px solid #e6f0fa;
   position: relative;
-}
-.expanding__paragraph {
-  width: 100%;
-  padding: 24px 0 48px;
+
+  &__content {
+    width: 100%;
+    padding: 24px 0 48px;
+  }
+
+  &__paragraph {
+    font-size: 16px;
+    line-height: 24px;
+    font-style: normal;
+    color: #5a646e;
+    margin: 12px 0;
+  }
 }
 
 .expanding__content-enter-active {
