--- a/src/components/serviceSupport/QuestionAnswerTable/QuestionAnswerTable.module.scss
+++ b/src/components/serviceSupport/QuestionAnswerTable/QuestionAnswerTable.module.scss
@@ -11,7 +11,7 @@
   border-bottom: 1px solid #e6f0fa;
   position: relative;
 
-  &__content {
+  &__paragraph {
     width: 100%;
     padding: 24px 0 48px;
   }
