--- a/src/styles/TopMenu.scss
+++ b/src/styles/TopMenu.scss
@@ -7,6 +7,7 @@
   top: 0;
 
   &__with-border {
+    // position: relative;
     border-bottom: 1px solid #e4e4e4;
     // box-shadow: 0 8px 8px rgb(26 65 101 / 25%);
   }
