--- a/src/components/management/Management/Management.scss
+++ b/src/components/management/Management/Management.scss
@@ -146,19 +146,27 @@
     }
   }
 
-  &__bar-link {
-    cursor: pointer;
-    white-space: nowrap;
-    line-height: 24px;
-    transition: color 0.3s;
-    outline: none;
+  .link {
     text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 16px;
+    line-height: 24px;
+    white-space: nowrap;
     display: inline;
     margin-right: 24px;
     margin-bottom: 0;
 
-    font-size: 16px;
     color: #50287d;
+    &:hover {
+      color: #8967b1;
+    }
+
+    transition: color 0.22s;
+    transition-duration: 0.22s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    transition-property: color;
 
     @media screen and (min-width: 944px) {
       white-space: normal;
@@ -167,6 +175,62 @@
       margin-bottom: 24px;
     }
   }
+
+  .link_active {
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    white-space: nowrap;
+    display: inline;
+    margin-right: 24px;
+    margin-bottom: 0;
+
+    color: #8967b1;
+
+    transition: color 0.22s;
+    transition-duration: 0.22s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    transition-property: color;
+
+    @media screen and (min-width: 944px) {
+      white-space: normal;
+      display: block;
+      margin-right: 0;
+      margin-bottom: 24px;
+    }
+  }
+
+  // &__bar-link {
+  //   text-decoration: none;
+  //   outline: none;
+  //   cursor: pointer;
+  //   font-size: 16px;
+  //   line-height: 24px;
+
+  //   white-space: nowrap;
+
+  //   transition: color 0.3s;
+
+  //   display: inline;
+  //   margin-right: 24px;
+  //   margin-bottom: 0;
+
+  //   color: #50287d;
+  //   &:hover {
+  //     color: #8967b1;
+  //   }
+
+  //   @media screen and (min-width: 944px) {
+  //     white-space: normal;
+  //     display: block;
+  //     margin-right: 0;
+  //     margin-bottom: 24px;
+  //   }
+  // }
 
   // management__bar-link_actived
   &__bar-link_actived {
