--- a/src/components/ui/links/SidebarLink/SidebarLink.module.scss
+++ b/src/components/ui/links/SidebarLink/SidebarLink.module.scss
@@ -11,7 +11,8 @@
 
   color: #50287d;
   &:hover {
-    color: #8967b1;
+    // color: #8967b1;
+    color: black;
   }
 
   transition: color 0.22s;
@@ -40,7 +41,8 @@
   margin-right: 24px;
   margin-bottom: 0;
 
-  color: #8967b1;
+  // color: #8967b1;
+  color: black;
 
   transition: color 0.22s;
   transition-duration: 0.22s;
