--- a/src/components/topMenu/TopMenu/TopMenu.module.scss
+++ b/src/components/topMenu/TopMenu/TopMenu.module.scss
@@ -6,7 +6,16 @@
   position: absolute;
   top: 0;
 
+  border-bottom: none;
+
   &__with-border {
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
+    height: 72px;
+    position: absolute;
+    top: 0;
+
     border-bottom: 1px solid #e4e4e4;
   }
 
@@ -93,14 +102,24 @@
     @media (min-width: 768px) {
       font-size: 16px;
     }
+  }
 
-    // top-menu__link_news
-    &_news {
-      color: #78828c;
+  &__link_news {
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 24px;
+    margin-left: 20px;
 
-      &:hover {
-        color: #000;
-      }
+    color: #78828c;
+
+    &:hover {
+      color: #000;
+    }
+
+    @media (min-width: 768px) {
+      font-size: 16px;
     }
   }
 
@@ -130,22 +149,26 @@
     @media (min-width: 768px) {
       display: block;
     }
+  }
 
-    // top-menu_title_news
-    &_news {
-      color: #78828c;
+  &__title_news {
+    margin-left: 12px;
+    font-size: 16px;
+    line-height: 24px;
+    cursor: pointer;
+    display: none;
 
-      &:hover {
-        color: #000;
-      }
+    color: #78828c;
+
+    &:hover {
+      color: #000;
+    }
+
+    @media (min-width: 768px) {
+      display: block;
     }
   }
 }
-
-// .stop-scrolling {
-//   height: 100%;
-//   overflow: hidden;
-// }
 
 .triple-icon {
   cursor: pointer;
