--- a/src/components/topMenu/MenuMobil/MenuMobil.module.scss
+++ b/src/components/topMenu/MenuMobil/MenuMobil.module.scss
@@ -1,11 +1,27 @@
 .menu-mobil {
-  position: absolute;
-  top: 0;
-  right: 20%;
-  width: 80%;
-  padding: 20px 24px;
-  background: #ffffff;
-  box-shadow: 0px 12px 24px rgba(26, 65, 100, 0.24);
+  &__right-20 {
+    position: absolute;
+    top: 0;
+    width: 80%;
+    padding: 20px 24px;
+    background: #ffffff;
+    box-shadow: 0px 12px 24px rgba(26, 65, 100, 0.24);
+
+    right: 20%;
+    transition: right 500ms ease;
+  }
+
+  &__right-100 {
+    position: absolute;
+    top: 0;
+    width: 80%;
+    padding: 20px 24px;
+    background: #ffffff;
+    box-shadow: 0px 12px 24px rgba(26, 65, 100, 0.24);
+
+    right: 100%;
+    transition: right 500ms ease;
+  }
 
   &__logos {
     height: 24px;
@@ -44,7 +60,7 @@
       color: #28323c;
     }
 
-    &:nth-of-type(3) {
+    &:nth-of-type(5) {
       margin-bottom: 32px;
     }
 
@@ -57,12 +73,12 @@
       line-height: 48px;
       margin-bottom: 24px;
 
-      &:nth-of-type(3) {
+      &:nth-of-type(5) {
         margin-bottom: 48px;
       }
 
       &:nth-of-type(8) {
-        margin-bottom: 96px;
+        margin-bottom: 64px;
       }
     }
   }
