--- a/src/components/topMenu/LoginForm/LoginForm.module.scss
+++ b/src/components/topMenu/LoginForm/LoginForm.module.scss
@@ -48,6 +48,10 @@
 
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.01);
+    // // ниже удалить
+    // opacity: 1;
+    // transform: translate(-50%, -50%) scale(1);
+    // // выше удалить
     transition: all 0.5s ease;
 
     @media screen and (min-width: 375px) {
