--- a/src/components/topMenu/LoginForm/LoginForm.module.scss
+++ b/src/components/topMenu/LoginForm/LoginForm.module.scss
@@ -77,6 +77,10 @@
 
   &__button-container {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     margin-top: 24px;
     margin-bottom: 24px;
   }
