--- a/src/components/ui/inputs/InputSubmit/InputSubmit.module.scss
+++ b/src/components/ui/inputs/InputSubmit/InputSubmit.module.scss
@@ -1,8 +1,8 @@
-.button-submit {
+.input-submit {
   cursor: pointer;
 
   width: 100%;
-  padding: 12px 8px;
+  padding: 12px 24px;
   font-size: 16px;
   line-height: 24px;
   color: white;
