--- a/src/components/general/expanding/ExpandingPanel/ExpandingPanel.module.scss
+++ b/src/components/general/expanding/ExpandingPanel/ExpandingPanel.module.scss
@@ -8,11 +8,11 @@
     position: relative;
     cursor: pointer;
     //
-    transition: padding 0.3s;
-    transition-property: padding;
-    transition-duration: 0.3s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
+    // transition: padding 0.3s;
+    // transition-property: padding;
+    // transition-duration: 0.3s;
+    // transition-timing-function: ease;
+    // transition-delay: 0s;
   }
 
   &__title {
