--- a/src/components/general/expanding/ExpandingAnswer/ExpandingAnswer.module.scss
+++ b/src/components/general/expanding/ExpandingAnswer/ExpandingAnswer.module.scss
@@ -7,32 +7,12 @@
     width: 100%;
     padding: 24px 0 48px;
   }
-
-  &__paragraph {
-    font-size: 16px;
-    line-height: 24px;
-    font-style: normal;
-    color: #5a646e;
-    margin: 12px 0;
-  }
 }
 
-.expanding__content-enter-active {
-  animation: bounce-in 0.5s;
+.expanding__display-block {
+  display: block;
 }
 
-.expanding__content-leave-active {
-  animation: bounce-in 0.5s reverse;
-}
-
-@keyframes bounce-in {
-  0% {
-    transform: scale(0);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
+.expanding__display-none {
+  display: none;
 }
