--- a/src/components/topMenu/TopMenu/TopMenu.module.scss
+++ b/src/components/topMenu/TopMenu/TopMenu.module.scss
@@ -79,9 +79,38 @@
   &__phone {
     min-width: 124px;
     margin-right: 32px;
+    position: relative;
 
     @media (min-width: 1200px) {
       margin-right: 64px;
+    }
+  }
+
+  &__call-back {
+    cursor: pointer;
+    position: absolute;
+    top: 24px;
+    left: 20px;
+    font-size: 11px;
+    color: #b5bdc8;
+
+    &:hover {
+      color: white;
+    }
+  }
+
+  // top-menu__call-back_news
+  &__call-back_news {
+    cursor: pointer;
+    position: absolute;
+    top: 24px;
+    left: 20px;
+    font-size: 11px;
+
+    color: #78828c;
+
+    &:hover {
+      color: #000;
     }
   }
 
