--- a/src/components/mainPage/examples/NewsItem/NewsItem.module.scss
+++ b/src/components/mainPage/examples/NewsItem/NewsItem.module.scss
@@ -1,6 +1,8 @@
 .news-item {
   width: 100%;
-  border: 1px solid purple;
+  // border: 1px solid purple;
+  border-top: 1px solid #e4e4e4;
+
   padding: 24px;
   margin-bottom: 24px;
 
@@ -10,6 +12,11 @@
     font-size: 18px;
     line-height: 24px;
     color: black;
+
+    @media screen and (min-width: 768px) {
+      font-size: 34px;
+      line-height: 48px;
+    }
   }
 
   &__id-date {
@@ -26,5 +33,31 @@
     font-size: 13px;
     line-height: 18px;
     color: #28323c;
+  }
+
+  &__paragraph-before {
+    margin: 12px 0;
+    color: #5a646e;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    vertical-align: baseline;
+    box-sizing: border-box;
+    position: relative;
+    margin-left: 32px;
+
+    &::before {
+      position: absolute;
+      content: "";
+      display: block;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background-color: #50287d;
+      left: -24px;
+      top: 8px;
+
+      visibility: hidden;
+    }
   }
 }
