--- a/src/components/mainPage/ImagesCalculator/ImagesCalculator.module.scss
+++ b/src/components/mainPage/ImagesCalculator/ImagesCalculator.module.scss
@@ -112,4 +112,10 @@
     color: #78828c;
     margin-left: 36px;
   }
+
+  &__prompt {
+    font-size: 16px;
+    line-height: 24px;
+    margin: 24px auto;
+  }
 }
