--- a/src/components/news/ListNews/ListNews.module.scss
+++ b/src/components/news/ListNews/ListNews.module.scss
@@ -9,6 +9,11 @@
       padding: 48px 28px;
     }
   }
+  &__prompt {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 36px;
+  }
 
   &__container-select-radio {
     width: 100%;
