--- a/src/components/topMenu/AdminLogin/AdminLogin.module.scss
+++ b/src/components/topMenu/AdminLogin/AdminLogin.module.scss
@@ -1,4 +1,4 @@
-.call-back {
+.admin-login {
   width: 100%;
   max-width: 320px;
   padding: 36px;
@@ -12,6 +12,15 @@
 
   @media screen and (min-width: 576px) {
     top: 18%;
+  }
+
+  &__admin {
+    display: block;
+    font-size: 18px;
+    line-height: 24px;
+    color: #28323c;
+    margin: 24px auto;
+    text-align: center;
   }
 
   &__input-container {
